# Phy607_Project3

./: LICENSE  README.md  main.sh  pyproject.toml
mycode/: .mymcmc.py.swp  .mysystem.py.swp  .wmysystem.py.swp  Full.py  mymcmc.py  mysystem.py  mytest.py
oldcode/: .mytest.py.swp
src/: .particle.py.swp  .system.py.swp  __init__.py  mcmc.py  particle.py  system.py  systemwithpriors.py  test.py
