[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc_sim"
version = "0.0.1"
dependencies = [
   "numpy",
   "matplotlib",
]
authors = [
  { name="Benjamin Maves", email="bmaves@gmail.com" },
  { name="Julia Rice", email="jrrice@syr.edu" },
]
description = "Package for Project 3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/jrrice5908/Phy607_Project3.git"

[project.scripts]
run_mcmc = "PHY607_Project3:main.sh"
